--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "dev": "tsc -w",
+    "watch": "tsc -w",
     "build": "tsc",
     "prepublishOnly": "npm run build"
   },
@@ -26,6 +27,7 @@
   },
   "homepage": "https://github.com/lafjs/laf-cli#readme",
   "devDependencies": {
+    "@types/mime": "^2.0.3",
     "@types/node": "^17.0.31",
     "typescript": "^4.6.4"
   },
@@ -33,6 +35,7 @@
     "@aws-sdk/client-s3": "^3.86.0",
     "chokidar": "^3.5.3",
     "commander": "^9.2.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "mime": "^3.0.0"
   }
 }
